# sel4-vm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  settings.cmake
examples/camkes-hello-world/: CMakeLists.txt
projects/camkes-hello-world/: CMakeLists.txt
projects/hello-world-rootserver/: CMakeLists.txt
projects/vm-minimal/: CMakeLists.txt  minimal-vm.camkes
